Quickfix: fixed arrow alignment

--- a/arrow.css
+++ b/arrow.css
@@ -5,6 +5,7 @@
     position: absolute;
     left: 50%;
     bottom: 0px;
+    margin: 0 0 0 -60px;
 }
 
 .arrow-down {
